syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.zktony.proto";
option java_outer_classname = "LogProto";

package log;

// The greeting service definition.
service LogService {
  // Sends a greeting
  rpc GetLogs (LogRequestPage) returns (LogReplyPage) {}
  rpc GetById (LogId) returns (Log) {}
  rpc AddLog (Log) returns (LogId) {}
  rpc AddLogs (LogList) returns (LogReply) {}
  rpc UpdateLog (Log) returns (LogReply) {}
  rpc DeleteLog (LogId) returns (LogReply) {}

}

message LogRequestPage {
  uint64 page_size = 1;
  uint64 page = 2;
}

message LogReply { bool success = 1; }

// The request message containing the user's name.
message LogId {
  string id = 1;
}

// The response message containing the greetings
message Log {
  string id = 1;
  string sub_id = 2;
  string log_type = 3;
  string content = 4;
  string create_time = 5;
}

message LogList { repeated Log list = 1; }

message LogReplyPage { repeated Log list = 1; uint64 total = 2; }